Fix flags positioning on squashed layout

--- a/src/views/Game/Players.styl
+++ b/src/views/Game/Players.styl
@@ -91,6 +91,10 @@
         .player-icon-container {
             min-height: 2rem;
             min-width: 2rem;
+            .player-flag {
+                top: 1rem;
+                left: 1rem;
+            }
         }
     }
 
